     + add a "SEE ALSO" section in manual page. (Closes: #458296)
     + automatically Cc: team@security.debian.org when (un)tagging a bug
       security. (Closes: #458840)
  * chdist: generate a manual page from source.
  * dch:
     + add a --bin-nmu option for binNMUs. (Closes: #458496)
     + add a -s/--security option for Security Team uploads inspired by
       Ubuntu's.
  * debc/debi: don't mess up --debs-dir option's argument when
    debian/svn-deblayout is present. (Closes: #446414)
  * debcheckout: add support for authentication mode with darcs.
    Thanks Luca Capello for the patch. (Closes: #445714)
  * debdiff: make diff output p1-compatible (for native packages or when
    interdiff is not available). Thanks dAniel hAhler for the patch.
    (Closes: #456223)
  * diff2patches: new patch written by Raphael Geissert <atomo64@gmail.com>.
    Extracts patches from a .diff.gz file placing them under debian/ or,
    if present, debian/patches. (Closes: #456626)
  * grep-excuses: permit requests to http://bjorn.haxx.se/debian/
    with --wipnity, -w option. Idea and implementation courtesy from
    Julian Mehnle <julian@mehnle.net>. (Closes: #448279)
  * mass-bug: add --user and --usertags options to avoid their wrapping.
    (Closes: #429479)
  * Changes pulled from Ubuntu's diff:
     + debian/control:
        - suggest wget|curl instead of wget
        - suggest lsb-release
     + debuild: preserve DEBEMAIL environment variable.

  [ Adam D. Barratt ]
  * who-uploads: Actually check debian-keyring.pgp by default rather
    than .gpg twice. Thanks to Philipp Kern for pointing the issue out
    (Closes: #456209)
  * who-uploads: Check debian-maintainers.gpg by default. Thanks to
    Philipp Kern for the suggestion (Closes: #456208)
  * debian/control, README: Add debian-maintainers to the suggested
    package list
  * debchange: Add a configuration file option to allow overriding the
    default setting of -t / --mainttrailer (Closes: #454254, #453644)