@@ -202,13 +202,16 @@ incrementing a binNMU version number, and add a binNMU changelog comment.
 Increment the Debian release number for a Debian QA Team upload, and
 add a QA upload changelog comment.
 .TP
-.B \-\-security
+.B \-\-security ", " \-s
 Increment the Debian release number for a Debian Security Team non-maintainer
 upload, and add a Security Team upload changelog comment.
 .TP
 .B \-\-bpo
 Increment the Debian release number for a upload to etch-backports,
 and add a backport upload changelog comment.
+.TP
+.B \-\-local ", " \-l \fIsuffix\fR
+ Add a suffix to the Debian version number for a local build.
 .TP
 .BR \-\-force\-bad\-version ", " \-b
 Force a version number to be less than the current one (e.g., when
